--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href='work4/index.html'>work4 js流程控制</a><br>
         <a href='work5/index.html'>work5 js循环语句程序</a>
     <a href="wokr6/index.html">wokr6 阶乘法计算圆周率</a>
-    </p>
-       持续更新中......
+   
+       持续更新中...... </p>
     </body>
 </html>
