--- a/work6/index.html
+++ b/work6/index.html
@@ -6,13 +6,8 @@
     <body>
         <p>原数组</p>
         <div id='array'></div>
-        <p>提取后的数据</p>
+        <p>提取后的数组</p>
         <div id='tranArray'></div>
-        <p>阶乘计算圆周率</p>
-        <p>请输入阶乘次数<input id="num" type="text" value="49"></p>
-        <p><button onclick="calculate()">计算</button></p>
-        <p>圆周率：<input id="pai" type="test" readonly="true"></p>
-    </body>
+        </body>
     <script src="tarray.js"></script>
-    <script src="pai.js"></script>
 </html>
