--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <a href='work12/index.html'>work12万年历</a><br>
 <a href='work13/index.html'>work13表单生成器</a><br>
 <a href='work14/index.html'>work14 限时秒杀</a><br>
-<a href='work14-1/index1.html'>work14-1 红绿灯</a><br>
+<a href='work14/index1.html'>work14-1 红绿灯</a><br>
    
        持续更新中...... 
     </br>
