--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <a href='work18/index1.html'>work18-1 ajax无刷新分页查看评论</a><br>
 <a href='work19/index.html'>work19 webSocket聊天室</a><br>
 <a href='work19/index1.html'>work19-1进度上传条</a><br>
+<a href='work20/index.html'>work20 折叠菜单</a><br>
+<a href='work20-1/index1.html'>work20-1 左移与右移</a><br>
 
       持续更新中......
     </br>
